# amaia

./: README.md  makefile
backend/core/: .env  pyproject.toml
docs/: mkdocs.yml
docs/docs/: api.md  contributing.md  index.md  makefile.md  plugins.md  setup.md  specs.md
frontend/core/src/: lerna.json
