[project]
name = "burga-backend-core"
version = "0.1.0"
description = "Core backend package for Burga, a modular AI-powered knowledge base application"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "copilotkit>=1.6.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "tavily-python>=0.4.0",
    "surrealdb>=2.0.0",
    "sqlite-vec>=0.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "uvicorn>=0.30.0",
    "loguru>=0.7.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    "python-decouple>=3.8.0",
    "pyyaml>=6.0.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "polars>=1.7.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "sqlfluff>=3.1.0",
    "sqlparser>=0.23.0",
    "rapidfuzz>=3.9.0",
    "fastembed>=0.3.0",
    "yake>=0.4.8",
    "pywhat>=0.3.0",
    "networkx>=3.3.0",
    "karateclub>=1.3.0",
    "pyvis>=0.3.0",
]
optional-dependencies.dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "mypy>=1.11.0",
    "pyinstrument>=4.7.0",
    "icecream>=2.1.0",
    "cprofile>=0.1.0",
    "hypothesis>=6.108.0",
    "pre-commit>=3.8.0",
    "vulture>=2.11.0",
    "pydocstyle>=6.3.0",
    "bandit>=1.7.0",
    "pretty-errors>=1.2.0",
]
requires-python = ">=3.11"
readme = "README.md"

[tool.uv]
package = true
dev-dependencies = [
    "ruff",
    "pytest",
    "mypy",
    "pyinstrument",
    "icecream",
    "hypothesis",
    "pre-commit",
    "vulture",
    "pydocstyle",
    "bandit",
    "pretty-errors",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D", "B", "TCH"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
